--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,5 +1,9 @@
 name: Continuous Integration
-on: [push] # Will make the workflow run every time you push to any branch
+on: 
+  push:
+    branches: main # Will make the workflow run every time you push to main branch
+  pull_request:
+    branches: main # Will make the workflow run every time you make a PR to main branch
 
 jobs:
   build:
