--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -52,3 +52,12 @@ jobs:
         slack_channel: devops-workshop-7
         status: cancelled
       if: cancelled()
+    
+    - name: Build and Push to Docker Hub
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: nnoeh/dotnettemplate
+        tag_with_ref: true
+        tags: "latest" 
