--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -66,4 +66,5 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: nnoeh/dotnettemplate
         tag_with_ref: true
+        tag_with_sha: true
         tags: "latest" 
