--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -65,9 +65,7 @@ jobs:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: nnoeh/dotnettemplate
-        tag_with_ref: true
-        tag_with_sha: true
-        tags: "latest" 
+        tags: /refs/heads/main, latest
 
   heroku:
     name: Heroku Deploy
